<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fakegram</string>
    <string name="app_version">V1.0</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="logo_image">LOGOImage</string>
    <string name="icon_image">ICONImage</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="fullname_placeholder">Fullname</string>
    <string name="email_placeholder">Email</string>
    <string name="back">Back</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="info_empty_username">Empty username!</string>
    <string name="info_empty_fullname">Empty fullname!</string>
    <string name="info_empty_email">Empty email!</string>
    <string name="info_empty_password">Empty password!</string>
    <string name="info_empty_short_password">Password too short! (minimum 6 characters)</string>
    <string name="new_to_fakegram_sign_up">New to fakegram? Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firebase_url">https://fakegram-eff4c-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="log_out">Log out</string>

</resources>